--- a/text_sentiment_ngrams_tutorial.ipynb
+++ b/text_sentiment_ngrams_tutorial.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: You are using pip version 21.1.2; however, version 21.2.4 is available.\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.3; however, version 21.2.4 is available.\n",
       "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/pytorch_latest_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
@@ -61,22 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "train.csv: 29.5MB [00:00, 113MB/s]                             \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torchtext.datasets import AG_NEWS\n",
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -214,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -263,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -316,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -344,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -418,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -430,65 +422,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| epoch   1 |   500/ 1782 batches | accuracy    0.698\n",
-      "| epoch   1 |  1000/ 1782 batches | accuracy    0.859\n",
-      "| epoch   1 |  1500/ 1782 batches | accuracy    0.879\n",
+      "| epoch   1 |   500/ 1782 batches | accuracy    0.678\n",
+      "| epoch   1 |  1000/ 1782 batches | accuracy    0.853\n",
+      "| epoch   1 |  1500/ 1782 batches | accuracy    0.875\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time: 10.01s | valid accuracy    0.879 \n",
+      "| end of epoch   1 | time: 10.93s | valid accuracy    0.894 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   2 |   500/ 1782 batches | accuracy    0.899\n",
-      "| epoch   2 |  1000/ 1782 batches | accuracy    0.902\n",
-      "| epoch   2 |  1500/ 1782 batches | accuracy    0.903\n",
+      "| epoch   2 |   500/ 1782 batches | accuracy    0.897\n",
+      "| epoch   2 |  1000/ 1782 batches | accuracy    0.903\n",
+      "| epoch   2 |  1500/ 1782 batches | accuracy    0.904\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time: 10.15s | valid accuracy    0.888 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   3 |   500/ 1782 batches | accuracy    0.915\n",
-      "| epoch   3 |  1000/ 1782 batches | accuracy    0.917\n",
-      "| epoch   3 |  1500/ 1782 batches | accuracy    0.915\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time: 10.03s | valid accuracy    0.895 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   4 |   500/ 1782 batches | accuracy    0.925\n",
-      "| epoch   4 |  1000/ 1782 batches | accuracy    0.925\n",
-      "| epoch   4 |  1500/ 1782 batches | accuracy    0.922\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   4 | time: 10.01s | valid accuracy    0.898 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   5 |   500/ 1782 batches | accuracy    0.933\n",
-      "| epoch   5 |  1000/ 1782 batches | accuracy    0.928\n",
-      "| epoch   5 |  1500/ 1782 batches | accuracy    0.929\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   5 | time: 10.01s | valid accuracy    0.897 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   6 |   500/ 1782 batches | accuracy    0.944\n",
-      "| epoch   6 |  1000/ 1782 batches | accuracy    0.944\n",
-      "| epoch   6 |  1500/ 1782 batches | accuracy    0.944\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   6 | time: 10.00s | valid accuracy    0.903 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   7 |   500/ 1782 batches | accuracy    0.946\n",
-      "| epoch   7 |  1000/ 1782 batches | accuracy    0.944\n",
-      "| epoch   7 |  1500/ 1782 batches | accuracy    0.945\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   7 | time:  9.99s | valid accuracy    0.903 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   8 |   500/ 1782 batches | accuracy    0.949\n",
-      "| epoch   8 |  1000/ 1782 batches | accuracy    0.945\n",
-      "| epoch   8 |  1500/ 1782 batches | accuracy    0.944\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   8 | time: 10.03s | valid accuracy    0.903 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch   9 |   500/ 1782 batches | accuracy    0.948\n",
-      "| epoch   9 |  1000/ 1782 batches | accuracy    0.946\n",
-      "| epoch   9 |  1500/ 1782 batches | accuracy    0.946\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   9 | time: 10.01s | valid accuracy    0.904 \n",
-      "-----------------------------------------------------------\n",
-      "| epoch  10 |   500/ 1782 batches | accuracy    0.947\n",
-      "| epoch  10 |  1000/ 1782 batches | accuracy    0.946\n",
-      "| epoch  10 |  1500/ 1782 batches | accuracy    0.949\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch  10 | time:  9.99s | valid accuracy    0.902 \n",
+      "| end of epoch   2 | time: 11.99s | valid accuracy    0.906 \n",
       "-----------------------------------------------------------\n"
      ]
     }
@@ -496,21 +440,23 @@
    "source": [
     "from torch.utils.data.dataset import random_split\n",
     "from torchtext.data.functional import to_map_style_dataset\n",
+    "\n",
     "# Hyperparameters\n",
-    "EPOCHS = 10 # epoch\n",
+    "EPOCHS = 2 # epoch\n",
     "LR = 5  # learning rate\n",
     "BATCH_SIZE = 64 # batch size for training\n",
     "  \n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=LR)\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, 1.0, gamma=0.1)\n",
+    "\n",
     "total_accu = None\n",
     "train_iter, test_iter = AG_NEWS()\n",
     "train_dataset = to_map_style_dataset(train_iter)\n",
     "test_dataset = to_map_style_dataset(test_iter)\n",
     "num_train = int(len(train_dataset) * 0.95)\n",
-    "split_train_, split_valid_ = \\\n",
-    "    random_split(train_dataset, [num_train, len(train_dataset) - num_train])\n",
+    "\n",
+    "split_train_, split_valid_ =  random_split(train_dataset, [num_train, len(train_dataset) - num_train])\n",
     "\n",
     "train_dataloader = DataLoader(split_train_, batch_size=BATCH_SIZE,\n",
     "                              shuffle=True, collate_fn=collate_batch)\n",
@@ -555,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -568,7 +514,7 @@
      "output_type": "stream",
      "text": [
       "Checking the results of test dataset.\n",
-      "test accuracy    0.908\n"
+      "test accuracy    0.899\n"
      ]
     }
    ],
@@ -592,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
